feat: Add unit tests for core services and enhance IP address detection with a new HTTP utility.

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "start": "bun run src/index.ts run",
         "lint": "eslint .",
         "lint:fix": "eslint . --fix",
+        "test": "bun test",
         "format": "prettier --write ."
     },
     "dependencies": {
