--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,16 +20,16 @@ jobs:
         include:
           - os: ubuntu-latest
             target: bun-linux-x64
-            outfile: cfddns-linux-x64
+            outfile: cloudflare-ddns-linux-x64
           - os: ubuntu-latest
             target: bun-linux-arm64
-            outfile: cfddns-linux-arm64
+            outfile: cloudflare-ddns-linux-arm64
           - os: macos-latest
             target: bun-macos-x64
-            outfile: cfddns-macos-x64
+            outfile: cloudflare-ddns-macos-x64
           - os: macos-latest
             target: bun-macos-arm64
-            outfile: cfddns-macos-arm64
+            outfile: cloudflare-ddns-macos-arm64
 
     steps:
       - uses: actions/checkout@v4
