--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "src/index.ts",
     "type": "module",
     "scripts": {
-        "build": "bun build --compile --minify --sourcemap src/index.ts --outfile cloudflare-ddns",
+        "build": "bun build --compile --minify src/index.ts --outfile cloudflare-ddns",
         "start": "bun run src/index.ts run",
         "lint": "eslint .",
         "lint:fix": "eslint . --fix",
