refactor: replace UPX GitHub Action with direct OS-specific package manager installation in release workflow.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,14 +43,16 @@ jobs:
           bun build --compile --minify --target ${{ matrix.target }} src/index.ts --outfile ${{ matrix.outfile }}
 
       - name: Install UPX
-        uses: svenstaro/upx-action@v2
-        with:
-          install-only: true
+        run: |
+          if [ "${{ runner.os }}" == "Linux" ]; then
+            sudo apt-get update && sudo apt-get install -y upx-ucl
+          elif [ "${{ runner.os }}" == "macOS" ]; then
+            brew install upx
+          fi
 
       - name: Compress binary with UPX
         run: |
           # UPX can significantly reduce Bun standalone binary size (e.g. 60MB -> 20MB)
-          # --best for maximum compression, --lzma for even better results on supported platforms
           upx --best --lzma ${{ matrix.outfile }} || upx --best ${{ matrix.outfile }}
 
       - name: Upload artifact
